--- a/index.html
+++ b/index.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="/css/index.css">
-</head>
-<body>
-    <h1>Server homepage</h1>
-    <img src="/images/abc.jpg" alt="">
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Document</title>
+        <link rel="stylesheet" href="/css/index.css" />
+    </head>
+    <body>
+        <h1>Server homepage</h1>
+        <button onclick="sendRequest(event)">Send Request</button>
+        <script>
+            function sendRequest(e) {
+                fetch("http://localhost:8000", {
+                    credentials : "include"
+                })
+                    .then((res) => res.json())
+                    .then((data) => console.log(data))
+                    .catch(console.error);
+            }
+        </script>
+    </body>
 </html>
